--- a/app/src/main/res/layout/activity_voice_comand.xml
+++ b/app/src/main/res/layout/activity_voice_comand.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/msg"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
@@ -26,7 +26,6 @@
         android:layout_marginTop="244dp"
         android:layout_marginEnd="148dp"
         android:layout_marginBottom="219dp"
-        android:onClick="startSpeak"
         android:text="click"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
